syntax = "proto3";

package yandex.cloud.priv.datatransfer.v1.endpoint;

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/datatransfer/v1/endpoint;tm_server_endpoint";

import "yandex/cloud/priv/datatransfer/v1/endpoint/common.proto";

enum YdbColumnsFilterType {
    YDB_COLUMNS_FILTER_TYPE_UNSPECIFIED = 0;
    INCLUDE = 1;
    EXCLUDE = 2;
}
enum YdbCleanupPolicy {
    YDB_CLEANUP_POLICY_UNSPECIFIED = 0;
    YDB_CLEANUP_POLICY_DISABLED = 1;
    YDB_CLEANUP_POLICY_DROP = 2;
}
message YdbPartitionPolicy {
    PartType part_type = 3;
    int64 part_size = 2;
    int64 keep_part_count = 1;
    string time_column = 4;
}
message YdbColumnsFilter {
    string table_names_regexp = 1;
    string column_names_regexp = 2;
    YdbColumnsFilterType type = 3;
}
message YdbSource {
    // Path in YDB where to store tables
    string database = 1;
    // Instance of YDB. example: ydb-ru-prestable.yandex.net:2135
    string instance = 2;
    string service_account_id = 6;
    // Token for YDB databse
    Secret token = 4;
    repeated string paths = 5;
    // Network interface for endpoint. If none will assume public ipv4
    string subnet_id = 30;
    // Use default subnets (use underlay subnet)
    bool underlay = 31;
    // Columns filter policy to ignore sensitive data during table loading
    repeated YdbColumnsFilter table_columns_filter = 32;
}
message YdbTarget {
    // Path in YDB where to store tables
    string database = 1;
    // Instance of YDB. example: ydb-ru-prestable.yandex.net:2135
    string instance = 2;
    string service_account_id = 11;
    // Amount of shard to split traffic. If presented will add _shard_col for each row.
    // Shard will be calculated as hash from timestamp % shard_count
    int64 shard_count = 3;
    // Token for YDB database
    Secret token = 4;
    // Should use replace upload. By default it will use BulkUpsert API (avaible since
    // 19.6)
    bool replace_upload = 5;
    // Partition policy. Will rotate table according it.
    YdbPartitionPolicy partition_policy = 6;
    // Preset if defined for compation policy
    string compaction_policy = 7;
    // Preset if defined for storage policy
    string storage_policy = 8;
    // Alternative table names in target
    repeated AltName alt_names = 9;
    // Path extension for database, each table will be layouted into this path
    string path = 10;
    // Network interface for endpoint. If none will assume public ipv4
    string subnet_id = 30;
    // Use default subnets (use underlay subnet)
    bool underlay = 31;
    YdbCleanupPolicy cleanup_policy = 21;
}
